--- a/setup.cfg
+++ b/setup.cfg
@@ -27,7 +27,7 @@ keywords =
 url = https://mpc.tno.nl/
 download_url = https://pypi.org/project/tno.mpc.encryption_schemes.templates/#files
 project_urls =
-    Documentation = https://docs.mpc.tno.nl/encryption_schemes/templates/1.0.3
+    Documentation = https://docs.mpc.tno.nl/encryption_schemes/templates/2.0.2
     Source Code = https://github.com/TNO-MPC/encryption_schemes.templates
 version = attr: tno.mpc.encryption_schemes.templates.__version__
 long_description_content_type = text/markdown
@@ -52,3 +52,7 @@ tno.mpc.encryption_schemes.templates =
 tno.mpc.encryption_schemes.templates.test =
     random_numbers_small.txt
     random_numbers_large.txt
+
+[options.extras_require]
+tests =
+    pytest
